# opencv_exercise

./: README.md
c++/: CMakeCache.txt  CMakeLists.txt  CvtColor.cpp  RotateImageWithGetRotationMatrix2D.cpp  util.cpp
c++/cvreadimg/: CMakeCache.txt  CMakeLists.txt  Makefile  ReadImgCV  cmake_install.cmake
c++/displayimage/: CMakeCache.txt  DisplayImage  Makefile  cmake_install.cmake
c++/include/: process.hpp  util.hpp
c++/libs/: CMakeLists.txt  process.cpp  util.cpp
c++/loadimg/: CMakeCache.txt  CMakeLists.txt  LoadImage  LoadImage.cpp  Makefile  cmake_install.cmake
c++/mattest/: CMakeCache.txt  CMakeLists.txt  Makefile  Mattest  Mattest.cpp  cmake_install.cmake
c++/readimg/: CMakeCache.txt  CMakeLists.txt  Makefile  ReadImage  cmake_install.cmake
c++/src/: CMakeLists.txt  CannyTest.cpp  ColorDetect.cpp  CvtDIY.cpp  CvtDIY_Point.cpp  DisplayStream1.cpp  LoadImage.cpp  MorphologyTest.cpp  PreCornerDetectExample.cpp  PreCornerDetectTest.cpp  ReadImage.cpp  ReadImgCV.cpp  Reflection.cpp
c++/stream/: .DisplayStream.cpp.swp  .DisplayStream2.cpp.swm  .DisplayStream2.cpp.swn  .DisplayStream2.cpp.swo  .DisplayStream2.cpp.swp  CMakeCache.txt  DisplayStream  DisplayStream.cpp  DisplayStream1  DisplayStream2  DisplayStream2.cpp  Makefile  cmake_install.cmake
python/: ShiTomasiCorner.py  access_modify_pixel.py  access_streaming.py  access_streaming_1.py  access_streaming_2.py  access_streaming_3.py  access_video.py  adaptiveThresholding.py  addWeighted.py  bitWise.py  bitWise1.py  bitWise_with_inRange.py  colorspaces.py  drawing_function.py  extractBlue.py  findContours.py  harrisCorner.py  lucas-kanada.py  meanshift.py  mouse_paint_brush.py  objectTrack.py  otsuThresholding.py  otsuThresholding_how.py  rectangle.py  save_video.py  sift.py  simpleThreshold.py  streamcapture.py  surf.py  thresholding.py  util.py
python/robeye/: corner.py  rob_eye.py
