add_executable( RotateImageWithGetRotationMatrix2D RotateImageWithGetRotationMatrix2D.cpp )
target_link_libraries( RotateImageWithGetRotationMatrix2D ${OpenCV_LIBS} )
add_executable( RotateRotationMatrix2DAffineTransform RotateRotationMatrix2DAffineTransform.cpp )
target_link_libraries( RotateRotationMatrix2DAffineTransform ${OpenCV_LIBS} )
add_executable(CvtColor CvtColor.cpp)
target_link_libraries( CvtColor  ${OpenCV_LIBS} util )
add_executable( ReadImgCV ReadImgCV.cpp )
target_link_libraries( ReadImgCV ${OpenCV_LIBS} )
add_executable( LoadImage LoadImage.cpp )
target_link_libraries( LoadImage ${OpenCV_LIBS} )
add_executable( ReadImage ReadImage.cpp )
target_link_libraries( ReadImage ${OpenCV_LIBS} )
add_executable( Mattest Mattest.cpp )
target_link_libraries( Mattest ${OpenCV_LIBS} )
add_executable( DisplayImage DisplayImage.cpp )
target_link_libraries( DisplayImage ${OpenCV_LIBS} )
add_executable( DisplayStream1 DisplayStream1.cpp )
target_link_libraries( DisplayStream1 ${OpenCV_LIBS} )
add_executable( DisplayStream2 DisplayStream2.cpp )
target_link_libraries( DisplayStream2 ${OpenCV_LIBS} )
add_executable( DisplayStream DisplayStream.cpp )
target_link_libraries( DisplayStream ${OpenCV_LIBS} )
add_executable( CvtDIY  CvtDIY.cpp )
target_link_libraries( CvtDIY ${OpenCV_LIBS} util)
add_executable( CvtDIY_Point  CvtDIY_Point.cpp )
target_link_libraries( CvtDIY_Point ${OpenCV_LIBS})
add_executable( ColorDetect  ColorDetect.cpp )
target_link_libraries( ColorDetect ${OpenCV_LIBS} util)
add_executable( CannyTest  CannyTest.cpp )
target_link_libraries( CannyTest ${OpenCV_LIBS} util process)

